# task_block_two

./: .gitignore  README.md  pyproject.toml
block_two/scripts/: free_chunk.py  free_compare_version.py  free_continuous_sequence.py  free_enlarge.py  free_find_longest_length.py  free_hamming_weight.py  free_ichunks.py  free_length_last_word.py  free_matrix_mirror.py  free_matrix_multi.py  free_matrix_trans.py  free_moneybox.py  free_pascal_tri.py  free_polish_notation.py  free_recursion.py  free_snail_path.py  free_summ_interval.py  free_summary_ranges.py  task2_lists.py  task4_dubl.py  task5_rotate.py  task6_rotate_left_right.py  task7_find_index.py  task8_find_second_index.py
tests/: test_tb_two.py
