[tool.poetry]
name = "task_block_two"
version = "0.1.0"
description = "задачи из второго блока курса python-разработчик"
authors = ["alexandertarakanov <alex.artoff@gmail.com>"]
packages = [{ include = "block_two" },]

[tool.poetry.scripts]
t2-lists = "block_two.scripts.task2_lists:main"
t4-dubl = "block_two.scripts.task4_dubl:main"
t5-rotate = "block_two.scripts.task5_rotate:main"
t6-rotate-lr = "block_two.scripts.task6_rotate_left_right:main"
t7-find-index = "block_two.scripts.task7_find_index:main"
t8-find-second = "block_two.scripts.task8_find_second_index:main"
free-hamming = "block_two.scripts.free_hamming_weight:main"
free-pascal = "block_two.scripts.free_pascal_tri:main"
free-enlarge = "block_two.scripts.free_enlarge:main"
free-last-word = "block_two.scripts.free_length_last_word:main"
free-chunk = "block_two.scripts.free_chunk:main"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
